Add REPORTSERVER_JAVA_OPTS doc to the Readme